--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ html{
     font-size: 62.5%;
 }
 
-header{
-    position: sticky;  
-}
+/* header{
+    position: sticky; 
+     
+} */
 h1{
     font-size: 4rem;
     
@@ -46,12 +47,21 @@ p{
 }
 
 .navColor a{
-    color: white;
+    color:black;
 }
+
+
 
 .navColor li{
     padding: 0px 15px;
 }
+
+.navDerecha {
+    display: flex;
+   
+    justify-content: flex-end;
+}
+
 
 
 .carouselMod{
@@ -65,27 +75,40 @@ p{
 .presentacion{
     text-align: center;
     text-decoration: none;
-    padding: 20px 0px;
+    padding: 10px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .presentacion h1{
     font-size: 4rem;
-    color: #FFB534;
+    color: white;
 }
 
-.presentacion h3{
+.presentacion h2{
     font-size: 2rem;
+    color: white;
 
 }
 .presentacion img{
-    height: 200px;
+    height: 100%;
+}
+
+.parrafo{
+    background-color: #FFB534;
+    width: 80%;
 }
 
 .tarjeta{
+
     padding: 20px 0px 0px 0px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    width: 80%;
     
     
 }
@@ -95,31 +118,217 @@ p{
 
 footer{
     background-color: #FFB534;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px 0px;
+    width: 100% !important ;
 }
 footer img {
     width: 50px;    
 }
 
-
-.texFooter{
-    font-size: large;
-}
 footer div{
    
     width: 20%;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
 
-.wasapImg{
 
-    position: sticky;
 
+
+/* Bienvenidos----------------------------------------------------------------------------- */
+
+.bienvenidos{
+    text-align: center;
+    text-decoration: none;
+    padding: 10px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bienvenidos h1{
+    font-size: 4rem;
+    color: #FFB534;
+}
+
+.bienvenidos h2{
+    font-size: 2rem;
+    color: black;
+ }  
+
+.grid-nosotros-1{
+    text-align: center;
+    text-decoration: none;
+    color: #FFB534;
+    margin: 10px 0px;
+}
+.contenedor-grid{
+    display: grid;
+    grid-template-areas: 
+    "img1   tex1    tex1 "
+    "img1   tex2    img2 ";
+    
+    grid-template-columns: 20% 30% 20%;
+    grid-template-rows: 300px 400px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+   
+}
+.contenedor-grid img{
+    width: 100%;
+    height: 100%;
+    border: #FFB534;
+    
+    padding: 20px;
+    border-radius: 20px;
+    
+}
+
+.contenedor-grid p{
+
+    font-size: large;
+   
+   
+}
+.grid-tex-1{
+    grid-area: tex1;
+}
+.grid-tex-2{
+    grid-area: tex2;
+}
+
+.grid-img-1{
+    grid-area: img1;
+}
+.grid-img-2{
+    grid-area: img2;
+}
+
+/* FIN bienvenidos----------------------------------------------------------------------------- */
+
+/* Contacto----------------------------------------------------------------------------- */
+
+.mapaContacto{
+    width: 100%;
+    height: 100%;
+}
+
+.formulario{
+    margin-top: 10px;
+}
+.mensaje{
+    
+    text-align: center;
+    margin: 20px 0;
+    font-size: 3rem;
+    color: #FFB534;
+    text-decoration: none;
+  
+}
+.mainContacto form{
+    background-color: #FFB534;
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 20px;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 10px 0;
+    color: white;
+}
+input{
+    width: 60%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.botonEnviar{
+    width: 100px;
+    margin-top: 10px;
+    padding: 10px 50px;
+    background-color: white;
+    border-radius: 10px;
+    color:#FFB534;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+/* FIN contacto----------------------------------------------------------------------------- */
+
+/* Galeria----------------------------------------------------------------------------- */
+
+
+.titulo{
+    font-size: 4rem;
+    color: #FFB534;
+    text-align: center;
+}
+
+.galeriaOrden{
+
+    padding: 20px 0px ;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    /* width: 80%; */
+    
+
+    
+}
+
+.subTitulo{
+    font-size: 3rem;
+    text-align: center;
+    text-decoration: underline;
+
+}
+
+
+
+/* FIN galeria----------------------------------------------------------------------------- */
+
+/* Productos----------------------------------------------------------------------------- */
+
+.detalleProdu{
+    font-size: 1rem; 
+}
+
+/* FIN productos----------------------------------------------------------------------------- */
+
+/* Mobile respon bienvenidos*/
+@media screen and (max-width:500px) {
+ 
+    nav img{
+        width: 30px;
+    }
+
+    .contenedor-grid{
+        grid-template-areas: 
+        "img2"
+        "tex1"
+        "img1"
+        "tex2";
+        grid-template-columns: 1fr;
+        grid-template-rows:  300px 300px 600px 130px ;
+        margin: 0px 10px;
+    }
+
+    .parrafo h1{
+        font-size: large;
+
+    }
+
+    .parrafo h2{
+        font-size: 1.5rem;
+    }
 }
