--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 550px;
 }
 .centrado .presentacion img {
   height: 100%;
@@ -283,6 +284,21 @@ img {
   color: #FBF6EE;
 }
 
+@media only screen and (min-width: 501px) and (max-width: 780px) {
+  /*bienvenidos*/
+  .contenedor-grid {
+    grid-template-areas: "img2" "tex1" "img1" "tex2";
+    grid-template-columns: 100%;
+    grid-template-rows: 350px 420px 600px 200px;
+  }
+  .contenedor-grid img {
+    width: 50%;
+  }
+  .contenedor-grid .grid-tex-1, .contenedor-grid .grid-tex-2 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
 @media only screen and (max-width: 500px) {
   header .navColor img {
     width: 25px;
@@ -291,13 +307,13 @@ img {
   .contenedor-grid {
     grid-template-areas: "img2" "tex1" "img1" "tex2";
     grid-template-columns: 100%;
-    grid-template-rows: 200px 200px 600px 200px;
+    grid-template-rows: 200px 420px 600px 200px;
   }
   .contenedor-grid img {
     width: 50%;
   }
   .contenedor-grid .grid-tex-1, .contenedor-grid .grid-tex-2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
   }
   /* Productos*/
@@ -306,7 +322,7 @@ img {
     align-items: center;
   }
   .produOrden .produCard {
-    width: 60%;
+    width: 80%;
     margin-bottom: 10px;
   }
   .produOrden .produCard ul h3 {
@@ -316,7 +332,7 @@ img {
     font-size: 1.5rem;
   }
   .produOrden .produCard ul li {
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: black;
     text-align: left;
   }
@@ -328,12 +344,11 @@ img {
     font-size: 2.5rem;
   }
   .orden {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
   }
   .orden .galeriaOrden {
-    width: 50%;
-    margin-bottom: 10px;
+    width: 45%;
+    margin-bottom: 5px;
   }
   .orden .galeriaOrden h3 {
     font-size: 2rem;
