--- a/sass/generales/_general.scss
+++ b/sass/generales/_general.scss
@@ -48,7 +48,8 @@ $negro: black;
         display: flex;
         flex-direction: column;
         align-items: center;
-      
+        width: 550px; 
+
         img{
             height: 100%;
             border-radius: 10px;
