--- a/sass/generales/_mediaq.scss
+++ b/sass/generales/_mediaq.scss
@@ -1,5 +1,34 @@
+@media only screen and (min-width: 501px) and (max-width: 780px){      
 
-    @media only screen and (max-width: 500px){
+/*bienvenidos*/
+.contenedor-grid {
+    grid-template-areas:
+        
+        "img2"
+        "tex1"
+        "img1"
+        "tex2";
+    grid-template-columns: 100%;
+    grid-template-rows: 350px 420px 600px 200px;
+    
+    img {
+        width: 50%;
+        
+    }
+    .grid-tex-1,.grid-tex-2{
+        font-size: 2.5rem;
+        text-align: center;
+    }
+
+  }
+
+
+      }
+   
+   
+   
+   
+   @media only screen and (max-width: 500px){
 
         header{
 
@@ -22,14 +51,14 @@
             "img1"
             "tex2";
         grid-template-columns: 100%;
-        grid-template-rows: 200px 200px 600px 200px;
+        grid-template-rows: 200px 420px 600px 200px;
         
         img {
             width: 50%;
             
         }
         .grid-tex-1,.grid-tex-2{
-            font-size: 1.5rem;
+            font-size: 2rem;
             text-align: center;
         }
 
@@ -43,7 +72,7 @@
 
         .produCard{
 
-            width: 60%;
+            width: 80%;
             margin-bottom: 10px;
             
            
@@ -57,7 +86,7 @@
                 }
                 
                 li{
-                    font-size: 1rem;
+                    font-size: 1.4rem;
                     color: $negro;
                     text-align: left;
                 }
@@ -80,13 +109,13 @@
 
     .orden{
     
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+       
     
         .galeriaOrden{
 
-            width: 50%;
-            margin-bottom: 10px;
+            width: 45%;
+            margin-bottom: 5px;
 
             h3{
                 font-size: 2rem;
@@ -99,3 +128,5 @@
     }
     
 }
+
+
