--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,9 +25,13 @@
   text-decoration: none;
   padding: 10px 0px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 550px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-around;
+  width: 80%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .centrado .presentacion img {
   height: 100%;
@@ -39,8 +43,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
-  width: 80%;
+  align-items: flex-start;
+  width: 50%;
   color: black;
   border: 2px solid #FFB534;
   border-radius: 10px;
