--- a/sass/generales/_general.scss
+++ b/sass/generales/_general.scss
@@ -23,6 +23,7 @@ $negro: black;
     @include flexgeneral (row, 
     center, center);
     width: 100%;
+    
 
     
 }
@@ -46,9 +47,13 @@ $negro: black;
         text-decoration: none;
         padding: 10px 0px;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 550px; 
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: stretch;
+        justify-content: space-around;
+        width: 80%; 
+        margin-left: 10px;
+        margin-right: 10px;
 
         img{
             height: 100%;
@@ -63,8 +68,8 @@ $negro: black;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-around;
-            align-items: center;
-            width: 80%;
+            align-items: flex-start;
+            width: 50%;
             color: $negro;
             border: 2px solid $naranja;
             border-radius: 10px;
